[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Scenes/SubOptions/Tagging/TagItemOptions.gd" type="Script" id=1]
[ext_resource path="res://src/Themes/General/Popup.tres" type="Theme" id=2]

[node name="TagItemOptions" type="PanelContainer"]
margin_right = 120.0
margin_bottom = 109.0
rect_min_size = Vector2( 140, 0 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 139.0
margin_bottom = 108.0
theme = ExtResource( 2 )

[node name="OptionVBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 128.0
margin_bottom = 87.0
theme = ExtResource( 2 )

[node name="RevealInExplorer" type="Button" parent="MarginContainer/OptionVBox"]
margin_right = 118.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 15 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Reveal In Explorer"

[node name="PlayExternally" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 20.0
margin_right = 118.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 15 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Play Externally"

[node name="ExtendedTags" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 40.0
margin_right = 118.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 15 )
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
text = "Extended Tags"

[connection signal="pressed" from="MarginContainer/OptionVBox/RevealInExplorer" to="." method="_on_RevealInExplorer_pressed"]
[connection signal="pressed" from="MarginContainer/OptionVBox/PlayExternally" to="." method="_on_PlayExternally_pressed"]
[connection signal="pressed" from="MarginContainer/OptionVBox/ExtendedTags" to="." method="_on_ExtendedTags_pressed"]
